[Media Controls] Fix the size of the overlay play button as 72x72px

This CL removes the code that dynamically sets the overlay play button
size based on the video size. Instead, this just sets the button at
72px by 72px. This solves *most* cases of a bug where the loading
spinner was slightly off-center on certain sizes.

Bug: 894866, 877113
Change-Id: I96ccda8921ffddddf009fa0b7ee28907201a966f
Reviewed-on: https://chromium-review.googlesource.com/c/1278860
Reviewed-by: Becca Hughes <beccahughes@chromium.org>
Commit-Queue: Tommy Steimel <steimel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#599547}
Former-commit-id: 53e727daf255777aa6ad6feb3d8188ec70db52e0